--- a/popup.html
+++ b/popup.html
@@ -50,7 +50,7 @@
     </div>
   </header>
      <div class="container mt-5">
-         <h2>thank you for your precious time We will get back to your answer 24 hours</h2>
+         <h2>thank you for your precious time We will get back to you with in 24 hours</h2>
          <div class="text-center mt-5">
                 
            
